# DiagramArchitectureGenerator

./: .editorconfig  .gitattributes  .gitignore  CODEOWNERS  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy-app.yml  deploy-frontend.yml  deploy-infra.yml  refresh-icons.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  azure_clients.py  main.py  settings.py  telemetry.py
backend/app/agents/: architect.py  stub_agent.py
backend/app/patterns/: __init__.py  agent-orchestration-foundry.json  aks-baseline.json  azure-landing-zone.json  baseline-openai-chat.json  basic-web-app.json  enterprise-bi-synapse.json  event-driven-microservices.json  fabric-medallion.json  hub-spoke.json  iot-reference.json  loader.py  multi-region-active-active.json  sap-on-azure.json  sql-mi-migration.json  web-app-private-endpoints.json  zero-trust-web.json
backend/app/renderer/: __init__.py  diagrams_render.py  drawio_export.py  icon_catalog.py  models.py
backend/app/routers/: __init__.py  generate.py
backend/tests/: conftest.py  test_main.py  test_telemetry.py
backend/tests/agents/: test_architect.py
backend/tests/patterns/: test_patterns_load.py
backend/tests/renderer/: __init__.py  test_diagrams_render.py  test_drawio_export.py  test_icon_catalog.py  test_models.py
backend/tests/routers/: test_generate.py
docs/: architecture.md  icon-compliance.md  operations.md  prompts.md
frontend/: .gitignore  Dockerfile  biome.json  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/generate/: route.ts
frontend/app/api/health/: route.ts
frontend/app/api/refine/: route.ts
frontend/app/components/: Chat.tsx  DiagramView.tsx  Footer.tsx
frontend/app/lib/: types.ts
frontend/tests/: smoke.test.ts
icons/: manifest.json
infra/: main.bicep
infra/modules/: acr.bicep  budget.bicep  container-apps.bicep  cosmos.bicep  foundry.bicep  front-door.bicep  identity.bicep  keyvault.bicep  networking.bicep  observability.bicep  search.bicep  storage.bicep
infra/parameters/: dev.bicepparam  prod.bicepparam
scripts/: build-icon-manifest.ps1  download-azure-icons.ps1
