[project]
name = "archgen-backend"
version = "0.1.0"
description = "Genesis — Azure Architecture Diagram Generator backend (FastAPI + diagrams + MCP server)"
readme = "../README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Naufal Prawironegoro" }]

dependencies = [
    # Web
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.36.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",

    # Diagrams
    "compat-fork-diagrams>=0.24.1",  # mingrammer/diagrams Py3.12+ fork on PyPI
    "graphviz>=0.20,<0.21",           # pinned by compat-fork-diagrams

    # Azure SDKs (managed identity everywhere; no API keys)
    "azure-identity>=1.25.0",
    "azure-storage-blob>=12.27.0",
    "azure-cosmos>=4.10.0",
    "azure-search-documents>=11.6.0",
    "openai>=2.6.0",  # AOAI-compatible client for Foundry v1 endpoint

    # Telemetry
    "azure-monitor-opentelemetry>=1.7.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",

    # MCP server
    "mcp>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.13.0",
    "mypy>=1.18.0",
    "types-defusedxml>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# -----------------------------------------------------------------------------
# Ruff (lint + format)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/__pycache__"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "RUF",              # ruff-specific
    "ASYNC",            # async-correctness
    "S",                # bandit (security)
    "SIM",              # simplify
    "PIE", "PL", "PT",
]
ignore = [
    "S101",   # assert used in tests
    "PLR0913", # function arg count — agents have many config dependencies
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004"]

[tool.ruff.format]
quote-style = "double"

# -----------------------------------------------------------------------------
# mypy --strict
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
no_implicit_reexport = true
show_error_codes = true
files = ["app"]

[[tool.mypy.overrides]]
# Third-party with missing stubs.
module = [
    "diagrams.*",
    "graphviz.*",
]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live Azure resources (skipped in CI by default)",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
]
